bug image defforme on iphone

--- a/wp-content/themes/S2_Themes/css/header.css
+++ b/wp-content/themes/S2_Themes/css/header.css
@@ -12,12 +12,13 @@ header{
     overflow: hidden;
 }
 
-.logo{
+.logo {
+    max-width: 100%;
+    max-height: 100%;
     height: auto;
     width: auto;
+    object-fit: contain; /* Garantit que l'image garde ses proportions */
 }
-
-
 .blurDiv{
     z-index: 9;
     position: fixed;
